guestbook/guestbook-ui-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: guestbook-ui
  namespace: thomas-playground
  labels:
spec:
  rules:
    - host: guestbook.inga.genesis-mining.com
      http:
        paths:
          - path: /
            backend:
              serviceName: guestbook-ui
              servicePort: 80
